--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>More actions
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -11,22 +11,52 @@
 
 <body>
     <div class="main">
+
+        <div>
+            <h2>GHAR SEVA</h2>
+        </div>
+
+        <div class="login-buttons">
+            <a href="customer-login.html" class="btn">Login as Customer</a>
+            <a href="service-login.html" class="btn">Login as Service Provider</a>
+        </div>
+
         <div class="navbar">
             <div class="icon">
-                <h1> GHAR SEVA <br>
-                </h1>
-                <h3> Now get any service at your door step !!</h3>
-                <div class="login-box">
-
-                    <h2>Select Login Type</h2>
-                    <img src="logo.jpg" alt="Logo" class="top-left-logo">
-
-                    <div class="login-buttons">
-                        <button onclick="location.href='provider-login.html'">Login as Service Provider</button>
-                        <button onclick="location.href='customer-login.html'">Login as Customer</button>
-                    </div>
+                <div class="logo">
+                 
                 </div>
 
+                <nav class="navbar">
+
+
             </div>
+
+            <ul class="nav-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="customer-login.html">Login</a></li>
+            </ul>
+            </nav>
+
+           <svg width="220" height="60" xmlns="http://www.w3.org/2000/svg">
+  <!-- Home Icon -->
+  <polygon points="10,35 35,10 60,35" fill="#4CAF50" />
+  <rect x="20" y="35" width="30" height="20" fill="#4CAF50" />
+  <rect x="32" y="42" width="8" height="13" fill="white" />
+
+  <!-- Text -->
+  <text x="49" y="55" font-family="Arial, sans-serif" font-size="28" fill="#333">
+    <tspan font-weight="bold">Ghar</tspan><tspan fill="#4CAF50">Seva</tspan>
+  </text>
+</svg>
+
+
         </div>
+
     </div>
+    </div>
+    </div>
+</Body>
+
