user interface ready

--- a/customer-login.html
+++ b/customer-login.html
@@ -11,7 +11,8 @@
         <form>
             <input class="box1" type="email" placeholder="Enter your email" required /><br>
             <input class="box2" type="password" placeholder="Enter your password" required /><br>
-            <button class="login-btn">Login</button>
+            <button href="interface.html" class="login-btn">Login</button>
+            
         </form>
         
         <p class="box4">
