--- a/interface.html
+++ b/interface.html
@@ -73,9 +73,10 @@
 <div class="sidebar">
   <h2>Ghr Seva</h2>
   <ul>
-    <li><a href="#">📅 Your Bookings</a></li>
-    <li><a href="#">📍 Track Your Service Provider</a></li>
-    <li><a href="#">💰 Payments & Bills</a></li>
+    <li><a href="booking.html">📅 Your Bookings</a></li>
+    <li><a href="location.html">📍 Track Your Service Provider</a></li>
+    <li><a href="payment.html">💰 Payments & Bills</a></li>
+    
     <li><a href="#">⭐ Your Reviews</a></li>
     <li><a href="profile.html">👤 Your Profile</a></li>
     <li><a href="interface.html">🔥 Popular in Your Region</a></li>
