--- a/profile.html
+++ b/profile.html
@@ -1,39 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <title>Help |CUSTOMER LOGIN </title>
-  <link rel="stylesheet" href="profile-style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>User Profile - Ghr Seva</title>
+  <link rel="stylesheet" href="profile-style.css" />
 </head>
-
 <body>
-<!-- Sidebar profile link -->
-<ul class="sidebar">
-  <li><a href="#" onclick="toggleProfile()">Your Profile</a></li>
-</ul>
+  <div class="profile-container">
+    <h2>User Profile</h2>
 
-<!-- Profile form (initially hidden) -->
-<div class="profile-form-container" id="profileForm">
-  <h2>Your Profile</h2>
-  <form>
-    <label for="profileImage">Upload Image:</label>
-    <input type="file" id="profileImage" accept="image/*"><br>
-
-    <label for="name">Your Name:</label>
-    <input type="text" id="name" placeholder="Enter your name"><br>
-
-    <label for="address">Your Address:</label>
-    <input type="text" id="address" placeholder="Enter your address"><br>
-
-    <label for="phone">Phone Number:</label>
-    <input type="tel" id="phone" placeholder="Enter your phone number"><br>
-
-    <label for="email">Email:</label>
-    <input type="email" id="email" placeholder="Enter your email"><br>
-
-    <button type="submit">Save</button>
-  </form>
-</div>
-
-  
+    <div class="profile-box">
+      <p><strong>Name:</strong> Aditi Singh</p>
+      <p><strong>Phone:</strong> +91 9876543210</p>
+      <p><strong>Email:</strong> aditi@example.com</p>
+      <p><strong>Address:</strong> 123, Green Avenue, New Delhi</p>
+    </div>
+    
+    <!-- Optional: Edit Button -->
+    <button class="edit-btn" onclick="alert('Edit feature coming soon!')">Edit Profile</button>
+  </div>
 </body>
+</html>
